# todoist-cli

./: .gitignore  DEPLOYMENT.md  PRD.md  README.md  pyproject.toml
src/todoist_cli/: __init__.py  cli.py  client.py  commands.py  config.py  errors.py  filters.py  formatting.py  mcp_server.py
tests/: conftest.py
tests/unit/: test_boundaries.py  test_cli.py  test_client_errors.py  test_commands.py  test_config.py  test_filters.py  test_formatting.py  test_help_snapshots.py
