[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist-cli"
version = "1.0.0"
description = "Personal Todoist CLI, agent-tailored output"
requires-python = ">=3.11"
authors = [{ name = "Dima Beliakov", email = "beliakov@cteleport.com" }]
dependencies = [
    "todoist-api-python>=2.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
todoist = "todoist_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
